# NetVisionTest

./: .gitignore  CMakeLists.txt  Readme.md  default.nix  flake.nix
include/: Point.hpp  Polygon.hpp  Segment.hpp
src/: Point.cpp  Polygon.cpp  Segment.cpp  main.cpp
tests/: CMakeLists.txt  PolygonTest.cpp
